// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Using fe should merge class names 1`] = `
Array [
  ".a {
    color: red
}

.b:hover {
    color: blue
}",
  <Provider
    renderer={
        Object {
            "_emitChange": [Function],
            "_mergeStyle": [Function],
            "_renderStyle": [Function],
            "_renderStyleToClassNames": [Function],
            "cache": Object {
              ":hovercolorblue": Object {
                "className": "b",
                "declaration": "color:blue",
                "media": "",
                "selector": ".b:hover",
                "support": "",
                "type": "RULE",
              },
              "colorred": Object {
                "className": "a",
                "declaration": "color:red",
                "media": "",
                "selector": ".a",
                "support": "",
                "type": "RULE",
              },
            },
            "clear": [Function],
            "filterClassName": [Function],
            "getNextRuleIdentifier": [Function],
            "keyframePrefixes": Array [
              "-webkit-",
              "-moz-",
              "",
            ],
            "listeners": Array [],
            "mediaQueryOrder": Array [],
            "nodes": Object {},
            "plugins": Array [],
            "renderFont": [Function],
            "renderKeyframe": [Function],
            "renderRule": [Function],
            "renderStatic": [Function],
            "selectorPrefix": "",
            "subscribe": [Function],
            "supportQueryOrder": Array [],
            "uniqueKeyframeIdentifier": 0,
            "uniqueRuleIdentifier": 2,
          }
    }
>
    <Comp>
        <FelaComponent
            customClass="foo-bar baz"
            render={[Function]}
            style={
                Object {
                    ":hover": Object {
                      "color": "blue",
                    },
                    "color": "red",
                  }
            }
        >
            <FelaTheme
                render={[Function]}
            >
                <div
                    className="foo-bar baz a b"
                >
                    Hello
                </div>
            </FelaTheme>
        </FelaComponent>
    </Comp>
</Provider>,
]
`;

exports[`Using fe should render inline style as CSS 1`] = `
Array [
  ".a {
    color: red
}

.b:hover {
    color: blue
}",
  <Provider
    renderer={
        Object {
            "_emitChange": [Function],
            "_mergeStyle": [Function],
            "_renderStyle": [Function],
            "_renderStyleToClassNames": [Function],
            "cache": Object {
              ":hovercolorblue": Object {
                "className": "b",
                "declaration": "color:blue",
                "media": "",
                "selector": ".b:hover",
                "support": "",
                "type": "RULE",
              },
              "colorred": Object {
                "className": "a",
                "declaration": "color:red",
                "media": "",
                "selector": ".a",
                "support": "",
                "type": "RULE",
              },
            },
            "clear": [Function],
            "filterClassName": [Function],
            "getNextRuleIdentifier": [Function],
            "keyframePrefixes": Array [
              "-webkit-",
              "-moz-",
              "",
            ],
            "listeners": Array [],
            "mediaQueryOrder": Array [],
            "nodes": Object {},
            "plugins": Array [],
            "renderFont": [Function],
            "renderKeyframe": [Function],
            "renderRule": [Function],
            "renderStatic": [Function],
            "selectorPrefix": "",
            "subscribe": [Function],
            "supportQueryOrder": Array [],
            "uniqueKeyframeIdentifier": 0,
            "uniqueRuleIdentifier": 2,
          }
    }
>
    <Comp>
        <FelaComponent
            render={[Function]}
            style={
                Object {
                    ":hover": Object {
                      "color": "blue",
                    },
                    "color": "red",
                  }
            }
        >
            <FelaTheme
                render={[Function]}
            >
                <div
                    className="a b"
                >
                    Hello
                </div>
            </FelaTheme>
        </FelaComponent>
    </Comp>
</Provider>,
]
`;
